--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<div class="hyde posts">
+<div class="jieun posts">
   {% for post in site.posts %} {% assign tags = post.tags %} {% if tags contains page.identifier %} {% include post.html %} {% endif %} {% endfor %}
 </div>
